Sun Mar 13 20:19:48 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* orbsvcs/orbsvcs/HTIOP/HTIOP_Connection_Handler.cpp:
	* orbsvcs/orbsvcs/SSLIOP/SSLIOP_Connection_Handler.cpp:

	  Fixed compilation errors introduced by this change 

	  Fri Mar 11 12:00:35 (IST) 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
	
Sun Mar 13 20:16:43 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Thread_Lane_Resources.cpp:
	* tao/Transport.cpp (provide_handler): 

	  Fixed unused variable warnings in g++ builds.

Sat Mar 12 13:24:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ImR_Client/ImR_Client_Adapter_Impl.{h,cpp}:
        * tao/ImR_Client/ImR_Client.{h,cpp}:
          Renamed ImR_Client_Adapter_Impl to ImR_Client, this file will be
          included by our users and this name makes more sense

        * tao/Makefile.am:
          Updated

        * orbsvcs/tests/ImplRepo/scale/server_i.cpp:
        * orbsvcs/tests/ImplRepo/nestea_server_i.cpp:
        * orbsvcs/tests/ImplRepo/airplane_server_i.cpp:
          Updated for change above

Fri Mar 11 18:12:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Direct_Collocation_Upcall_Wrapper.cpp:
          Added missing includes

        * TAO_IDL/be/be_visitor_operation/amh_ss.cpp:
          Generate static_cast in one line

Fri Mar 11 12:24:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/*.pidl:
          Added -SS to the regeneration instructions for the pidl files
          that have an empty S.h file

Fri Mar 11 12:00:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/PSS/PSDL_Scope.cpp:
        * orbsvcs/PSS/PSDL_Node.cpp:
        * examples/Advanced/ch_12/icp.cpp:
        * examples/Advanced/ch_21/icp.cpp:
        * examples/Advanced/ch_18/icp.cpp:
        * examples/Advanced/ch_8_and_10/icp.cpp:
        * docs/tutorials/Quoter/Simple/ImprovedServer/Stock_Factory_i.h: